--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <section id="login">
             <div id="imagem">
-                Foto
+                <!-- Imagem -->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
